<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
<!--基金，筛选-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/show_our_company"
            android:textColor="#333" />

        <ImageView
            android:id="@+id/iv_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:src="@drawable/switch_on" />
    </RelativeLayout>

    <include layout="@layout/include_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/close_period"
        android:textColor="#999"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/rg_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/rb_no_close"
            style="@style/product_radio_button"
            android:text="@string/no_limit" />

        <RadioButton
            android:id="@+id/rb_less_one_month"
            style="@style/product_radio_button"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-25dp"
            android:text="@string/date_one_month" />

        <RadioButton
            android:id="@+id/rb_more_three_month"
            style="@style/product_radio_button"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-25dp"
            android:text="@string/date_three_month" />

        <RadioButton
            android:id="@+id/rb_in_half_year"
            style="@style/product_radio_button"
            android:layout_marginTop="15dp"
            android:text="@string/date_half_year" />

        <RadioButton
            android:id="@+id/rb_more_half_year"
            style="@style/product_radio_button"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-25dp"
            android:text="@string/more_than_half_year" />
    </RadioGroup>

    <include layout="@layout/include_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/open_period"
        android:textColor="#999"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/rg_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/rb_no_open"
            style="@style/product_radio_button"
            android:text="@string/no_limit" />

        <RadioButton
            android:id="@+id/rb_day"
            style="@style/product_radio_button"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-25dp"
            android:text="@string/open_day" />

        <RadioButton
            android:id="@+id/rb_month"
            style="@style/product_radio_button"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-25dp"
            android:text="@string/open_month" />

        <RadioButton
            android:id="@+id/rb_three"
            style="@style/product_radio_button"
            android:layout_marginTop="15dp"
            android:text="@string/open_three_month" />
    </RadioGroup>

    <include layout="@layout/include_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/invest_style"
        android:textColor="#999"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_no_choose"
            style="@style/product_radio_button_cb"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/no_limit" />

        <CheckBox
            android:id="@+id/cb_theme"
            style="@style/product_check_box"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/rb_no_choose"
            android:text="@string/theme_investment" />

        <CheckBox
            android:id="@+id/cb_value"
            style="@style/product_check_box"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/cb_theme"
            android:text="@string/value_investment" />

        <CheckBox
            android:id="@+id/cb_trend"
            style="@style/product_check_box"
            android:layout_below="@id/rb_no_choose"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/trend_investment" />

        <CheckBox
            android:id="@+id/cb_interest"
            style="@style/product_check_box"
            android:layout_below="@id/cb_theme"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/cb_trend"
            android:text="@string/interest_investment" />

        <include layout="@layout/include_reset_sure" />
    </RelativeLayout>
</LinearLayout>
