<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--基金，期限-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#fff"
        android:paddingEnd="5dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/product_date"
        android:textColor="#999"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/rg_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingEnd="5dp"
        android:paddingStart="40dp"
        android:paddingTop="20dp">

        <RadioButton
            android:id="@+id/rb_no_date"
            style="@style/product_radio_button"
            android:text="@string/no_limit" />

        <RadioButton
            android:id="@+id/rb_one_day"
            style="@style/product_radio_button"
            android:layout_marginStart="110dp"
            android:layout_marginTop="-25dp"
            android:text="@string/date_one_day" />

        <RadioButton
            android:id="@+id/rb_one_week"
            style="@style/product_radio_button"
            android:layout_marginStart="210dp"
            android:layout_marginTop="-25dp"
            android:text="@string/date_one_week" />

        <RadioButton
            android:id="@+id/rb_one_month"
            style="@style/product_radio_button"
            android:layout_marginTop="15dp"
            android:text="@string/date_one_month" />

        <RadioButton
            android:id="@+id/rb_three_month"
            style="@style/product_radio_button"
            android:layout_marginStart="110dp"
            android:layout_marginTop="-25dp"
            android:text="@string/date_three_month" />

        <RadioButton
            android:id="@+id/rb_half_year"
            style="@style/product_radio_button"
            android:layout_marginStart="210dp"
            android:layout_marginTop="-25dp"
            android:text="@string/date_half_year" />

        <RadioButton
            android:id="@+id/rb_one_year"
            style="@style/product_radio_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/date_more_year" />
    </RadioGroup>

    <include layout="@layout/include_reset_sure" />

    <include layout="@layout/include_background" />
</LinearLayout>