<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--基金，类别-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#fff"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:text="@string/product_type"
        android:textColor="#999"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:background="#fff">

        <RadioButton
            android:id="@+id/rb_no_type"
            style="@style/product_radio_button_cb"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/no_limit" />

        <CheckBox
            android:id="@+id/cb_bank"
            style="@style/product_check_box"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/rb_no_type"
            android:text="@string/bank" />

        <CheckBox
            android:id="@+id/cb_fund"
            style="@style/product_check_box"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/cb_bank"
            android:text="@string/fund" />

        <CheckBox
            android:id="@+id/cb_manage"
            style="@style/product_check_box"
            android:layout_below="@id/rb_no_type"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/manage" />

        <CheckBox
            android:id="@+id/cb_hook"
            style="@style/product_check_box"
            android:layout_width="wrap_content"
            android:layout_below="@id/cb_bank"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/cb_manage"
            android:drawablePadding="3dp"
            android:text="@string/hook" />
    </RelativeLayout>

    <include layout="@layout/include_reset_sure" />

    <include layout="@layout/include_background" />
</LinearLayout>
