<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--基金，投资标的-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#fff"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:text="@string/invest"
        android:textColor="#999"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#fff">
        
        <RadioButton
            android:id="@+id/rb_no_invest"
            style="@style/product_radio_button_cb"
            android:layout_marginStart="40dp"
            android:text="@string/no_limit" />

        <CheckBox
            android:id="@+id/cb_fixed_income"
            style="@style/product_check_box"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/rb_no_invest"
            android:text="@string/fixed_income" />

        <CheckBox
            android:id="@+id/cb_cache"
            style="@style/product_check_box"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/cb_fixed_income"
            android:drawablePadding="2dp"
            android:text="@string/cache_manager" />
    </RelativeLayout>

    <include layout="@layout/include_reset_sure" />

    <include layout="@layout/include_background" />
</LinearLayout>
